--- a/src/components/App.css
+++ b/src/components/App.css
@@ -121,7 +121,7 @@ a {
   grid-template-columns: repeat(2, auto);
   justify-items: center;
   margin: 0 auto;
-  font-size: 0.9em;
+  font-size: 0.7em;
   cursor: pointer;
 }
 
@@ -144,6 +144,7 @@ a {
   border: 3px solid var(--black);
   font-weight: bold;
   box-shadow: 0px 0px 4px var(--gray);
+  pointer-events: none;
 }
 
 .section_side_bar {
@@ -493,8 +494,6 @@ footer p {
   text-align: center;
 }
 
-
-
 @media screen and (max-width: 916px) {
   .card_item {
     grid-template-columns: repeat(2, 1fr);
@@ -553,7 +552,6 @@ footer p {
     top: 10px;
     font-size: 2em;
   }
-
 
   footer {
     justify-items: start;
