--- a/src/components/App.css
+++ b/src/components/App.css
@@ -171,6 +171,10 @@ a {
   font-size: 1.4em;
 }
 
+.side_bar_content a {
+  font-weight: bold;
+}
+
 .side_bar_cancel {
   display: grid;
   grid-template-columns: 1fr auto;
@@ -357,6 +361,10 @@ a {
   animation: loading 1.5s infinite;
 }
 
+.load_phone {
+  margin-bottom: 10px;
+}
+
 @-webkit-keyframes loading {
   100% {
     -webkit-transform: translateX(100%);
@@ -448,6 +456,45 @@ a {
 
 .noUi-connect {
   background: #8b0000;
+}
+
+
+.alert {
+  width: 16em;
+  box-shadow: 0 0.5px 2px #000;
+  z-index: 999999;
+  display: none;
+  position: fixed;
+  padding: 10px 30px 10px 30px;
+  justify-content: space-between;
+  border-radius: 5px;
+  top: 97px;
+  right: 0;
+  grid-template-columns: 1fr auto;
+  grid-gap: 10px;
+  justify-items: start;
+  align-items: center;
+  animation: first 1s normal backwards;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.successful {
+  display: grid;
+  background: var(--mainColor);
+  border-bottom: 2px solid var(--border);
+}
+
+.failed {
+  display: grid;
+  background: var(--border);
+  border-bottom: 2px solid var(--mainColor);
+}
+
+@keyframes first {
+  20% {
+    width: 25%;
+  }
 }
 
 footer {
